applications/gateways/base/oauth2-proxy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
    istio-injection: enabled
