applications/gateways/base/oauth2-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  type: ClusterIP
  ports:
    - port: 4180
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: oauth2-proxy
    release: oauth2-proxy
